# AI-Using-LangChain

./: RunnableLambda.py  RunnableParallel.py  RunnablePassthrough.py  RunnableSequence.py  Runnablebranch.py  chatmodel_hf.py  length_based.py  main.py  mmr.py  outputparser1.py  outputparser2.py  parallel_chain.py  pdfloader.py  prompt_ui.py  pyproject.toml  requirements.txt  sequential_chain.py  simple_chain.py  text_based.py  text_loader.py  typeddict_demo.py  vector_database.py  vector_r.py  wikipedia_retriever.py
chroma_db/: chroma.sqlite3
