[project]
name = "lastclass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-pdf>=0.2.0",
    "pypdf>=6.14.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.2",
    "wikipedia>=1.4.0",
]
